# dlai-building-apps-vector-dbs

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_semantic_search.ipynb  02.rag.ipynb  02_rag.ipynb  03_recommender.ipynb  04_hybrid_search.ipynb  05_facial_similarity_search.ipynb  06_anomaly_detection.ipynb
