[tool.poetry]
name = "dlai-building-apps-vector-dbs"
version = "0.1.0"
description = "[DeepLearning.AI] Building Apps with Vector DBs course"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
sentence-transformers = "^3.0.1"
matplotlib = "^3.9.2"
torch = "^2.4.1"
langchain = "0.0.346"
pinecone-client = "3.2.2"
pinecone-text = "^0.9.0"
tiktoken = "^0.7.0"
tqdm = "^4.66.5"
datasets = "^2.21.0"
deepface = "^0.0.93"
tf-keras = "^2.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
